# cbml

./: .gitignore  Cargo.toml  README.md  doing.md  key_words.md  roadmap.md
cbml_language_design/: any.md  array.md  boolean.md  struct.md  union.md  类型.md
examples/: 1.cbml  1.cmml  1.def.cbml  1.typedef.cbml  2_arr.cbml  2_arr.typedef.cbml  3_enum.cbml  4_number.cbml  5_string.cbml  6_optinal.cbml  7_struct-cbml  7_struct.cbml  7_struct_def.cbml  8_union.cbml  8_union.def.cbml  8_union_def.cbml
src/: cbml_codable.rs  lib.rs  main.rs  source_map.rs  value.rs
src/cbml_data/: cbml_type.rs  cbml_value.rs  mod.rs
src/cbml_project/: cbml_file.rs  cbml_project.rs  code_file.rs  def_cbml_file.rs  mod.rs  typedef_file.rs  types.rs
src/cbml_value/: mod.rs  value.rs
src/formater/: mod.rs
src/lexer/: lexer.rs  mod.rs  token.rs
src/parser/: cbml_parser.rs  mod.rs  parser_error.rs  typedef.rs
src/parser/ast/: stmt.rs
src/typecheck/: mod.rs  types_for_check.rs
types/: number.md  optional.md  string.md  union.md  类型.md
