[package]
name = "cbml"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
# chenbao_cmd = { git = "ssh://git@github.com/chen-bao-x/chenbao_cmd.git", branch = "master", version = "0.1.0" }
# reqwest = { version = "0.12.15", features = ["blocking"] }
cbml_root = { path = "/Users/chenbao/Downloads/cbml_root/" }
